# grain

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  build.ts  deno.json  docker-compose.yml  fly.toml  globals.d.ts  hatk.config.ts  hatk.generated.client.ts  hatk.generated.ts  input.css  lexicons.json  litefs.yml  main.tsx  package-lock.json  package.json  playwright.config.ts  sync.sh  tsconfig.server.json  tsconfig.server.tsbuildinfo
__generated__/: index.ts  lexicons.ts
aip/: DEVICE_CODE_TODO.md  flake.nix  fly.toml
app/: app.css  app.html  error.html  service-worker.js
appview/: .dockerignore  .env.example  README.md  deno.json  fly.toml  sync.sh
bff/: .dockerignore  .gitignore  README.md  deno.json
cli/: .env.example  Cargo.toml  README.md  flake.nix  install.sh
cli/src/: device_auth.rs  main.rs  oauth_helpers.rs  photo_manip.rs
darkroom/: .env.example  README.md  flake.nix  fly.toml
db/: schema.sql
flutter/: pubspec.yaml
local-infra/: Caddyfile  docker-compose.yml  pds.env
moderation/: bin.ts
notifications/: .env.example  Dockerfile  deno.json  fly.toml
patches/: pds-csrf-no-secure.js
services/darkroom/: Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml  nix-deploy.sh
services/darkroom/src/: composite_handler.rs  gallery_service.rs  html_generator.rs  main.rs  preview_handler.rs  screenshot_service.rs  types.rs
services/darkroom/static/css/: adaptive_layout.css  base.css
services/darkroom/static/js/: collage_layout.js
services/darkroom/templates/: multi_image.html  single_image.html
(+685 files in other folders)
